Added the ability to add a device type in the program and corrected spelling errors

--- a/src/main/resources/templates/devices/all-devices.html
+++ b/src/main/resources/templates/devices/all-devices.html
@@ -27,7 +27,7 @@
                         <small>Тип устройства</small>
                     </th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                        <small>Инвентарынй номер</small>
+                        <small>Инвентарный номер</small>
                     </th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
                         <small>Производитель</small>
