--- a/src/main/resources/templates/errors/error-ip.html
+++ b/src/main/resources/templates/errors/error-ip.html
@@ -13,16 +13,11 @@
 <main id="content-main">
   <div class="container-fluid">
     <div th:replace="~{fragments/header-title-fragment.html::header-title('Error (unknown ip address)')}"></div>
-    <h6>Вы видете это сообщение по тому что программа не смогла определить ваш ip адресс. Обратитесь к разработчику.</h6>
+    <h6>Вы видите это сообщение по тому что программа не смогла определить ваш ip адрес. Обратитесь к разработчику.</h6>
   </div>
 </main>
 <script type="text/javascript" th:src="@{/plugins/bootstrap-5.3.0/js/bootstrap.bundle.js}"></script>
 <script type="text/javascript" th:src="@{/plugins/jquery/jquery-3.6.0.min.js}"></script>
-<!--    <script>-->
-<!--        $(document).ready(function() {-->
-<!--            $('.js-example-basic-single').select2();-->
-<!--        });-->
-<!--    </script>-->
 <script type="text/javascript" th:src="@{/js/script.js}"></script>
 </body>
 </html>
