--- a/src/main/resources/templates/info/info-home.html
+++ b/src/main/resources/templates/info/info-home.html
@@ -20,19 +20,40 @@
         </div>
         <div class="card-body">
             <div class="alert alert-info">
+                <h5>v.2.1.0</h5>
+                <ol>
+                    <li>Теперь администраторы могут просмотреть историю пользователей прямо в программе</li>
+                    <li>Страница устройства</li>
+                    <ol>
+                        <li>Появилась история каждого устройства</li>
+                        <li>Вернулась улучшенная версия технических характеристик устройств</li>
+                    </ol>
+                    <li>Страница настроек</li>
+                    <ol>
+                        <li>Разблокирована вкладка "Устройства"</li>
+                        <li>Теперь администраторы могу добавлять новые типы устройства (Принтеры, МФУ...)</li>
+                        <li>Теперь администраторы могу добавлять новых производителей (Canon, LG...)</li>
+                    </ol>
+                    <li>Другое</li>
+                    <ol>
+                        <li>Исправлены текстовые ошибки</li>
+                    </ol>
+                </ol>
+            </div>
+            <div class="alert alert-secondary">
                 <h5>v.2.0.1</h5>
                 <ol>
                     <li>Страница устройства</li>
                     <ol>
-                        <li>Добавленна кнопка назад, которая вернет на страницу всех устройств</li>
-                        <li>Кнопка удалить теперь выведит предупреждение об удалении</li>
+                        <li>Добавлена кнопка назад, которая вернет на страницу всех устройств</li>
+                        <li>Кнопка удалить теперь выведет предупреждение об удалении</li>
                     </ol>
                 </ol>
             </div>
-            <div class="alert alert-info">
+            <div class="alert alert-secondary">
                 <h5>v.2.0.0</h5>
                 <ol>
-                    <li>Обновленно:</li>
+                    <li>Обновлено:</li>
                     <ol>
                         <li>Полностью переработан внешний вид</li>
                         <li>Улучшено взаимодействие с программой с учетом рекомендаций пользователей</li>
@@ -49,12 +70,12 @@
                         </ol>
                         <li>Взаимодействие с устройствами:</li>
                         <ol>
-                            <li>Добавленна сортировка для каждого столбца таблиц</li>
+                            <li>Добавлена сортировка для каждого столбца таблиц</li>
                             <li>Поиск теперь работает по всем параметрам таблиц (с помощью него можно теперь сортировать данные и выгружать их в Excel)</li>
                             <li>Теперь производители устройств будут едины. Их придется выбирать, а не писать самостоятельно (Не будет того, что кто-то написал Aquarius, а кто-то AQUARIUS ну и самое забавное Aguarius)</li>
-                            <li>Cтатусы перерабоаны. Теперь в программе имеются все необходимые для этого статусы.</li>
+                            <li>Cтатусы переработаны. Теперь в программе имеются все необходимые для этого статусы.</li>
                             <li>Убран промежуточный этап просмотра информации об устройстве. Теперь редактирование доступно сразу.</li>
-                            <li>В описании устройства убрано поле "Ответсвенный" просто за ненадобностью.</li>
+                            <li>В описании устройства убрано поле "Ответственный" просто за ненадобностью.</li>
                         </ol>
                         <li>Работа с адресами:</li>
                         <ol>
@@ -62,15 +83,14 @@
                         </ol>
                         <li>Работа с пользователями:</li>
                         <ol>
-                            <li>Добавлена возможность редактирования пользователей (как для администраторам, так и самим пользователям(с ограничениями))</li>
+                            <li>Добавлена возможность редактирования пользователей (как администраторам, так и самим пользователям(с ограничениями))</li>
                             <li>Добавлена возможность удаления пользователей (только администраторам)</li>
-                            <li>Все пользователи могут просматривать кто зарегистрированн в программе, но изменять могут только администраторы</li>
-                            <li>Cессия в программе будет длиннее. (Реже теперь будет необходимо вводить логин и пароль)</li>
+                            <li>Все пользователи могут просматривать кто зарегистрирован в программе, но изменять могут только администраторы</li>
                             <li>Администратор более не может подсказать вам ваш пароль, но может сбросить его.</li>
                         </ol>
                         <li>Другое:</li>
                         <ol>
-                            <li>У программы появилась версионность. Версия указанна на страница авторизации и на вкладке "Информация".</li>
+                            <li>У программы появилась версионность. Версия указанна на странице авторизации и на вкладке "Информация".</li>
                             <li>Добавлена страница "Информация". На ней можно будет узнать о текущей версии программы и о списках изменений.</li>
                         </ol>
                     </ol>
