--- a/src/main/resources/templates/settings/settings-user.html
+++ b/src/main/resources/templates/settings/settings-user.html
@@ -24,7 +24,7 @@
         </div>
 
         <div th:if="${Successfully}" class="alert alert-success mt-4" role="alert">
-            Действие успешно выполненно.
+            Действие успешно выполнено.
         </div>
 
         <div class="card default-shadow mt-4">
