--- a/src/main/resources/templates/errors/error-db-connect.html
+++ b/src/main/resources/templates/errors/error-db-connect.html
@@ -14,16 +14,11 @@
     <i class="bi bi-exclamation-triangle" style="font-size:2.5rem; color: red;"></i>
     <h3>Ошибка подключения к базе данных</h3>
   </div>
-  <h6>Проблема доступа к базе данных 10.85.0.60:50000. Соейдинение утерянно. После восстановления подключения вы сможете продолжить использование программы.</h6>
+  <h6>Проблема доступа к базе данных 10.85.0.60:50000. Соединение утеряно. После восстановления подключения вы сможете продолжить использование программы.</h6>
   <h6>Problem accessing database 10.85.0.60:50000. Connection lost. After the connection is restored, you can continue using the program.</h6>
 </div>
 <script type="text/javascript" th:src="@{/plugins/bootstrap-5.3.0/js/bootstrap.bundle.js}"></script>
 <script type="text/javascript" th:src="@{/plugins/jquery/jquery-3.6.0.min.js}"></script>
-<!--    <script>-->
-<!--        $(document).ready(function() {-->
-<!--            $('.js-example-basic-single').select2();-->
-<!--        });-->
-<!--    </script>-->
 <script type="text/javascript" th:src="@{/js/script.js}"></script>
 </body>
 </html>
