--- a/src/main/resources/templates/settings/settings-address.html
+++ b/src/main/resources/templates/settings/settings-address.html
@@ -22,7 +22,7 @@
         <div th:if="${Error != ''}" class="alert alert-danger mt-4" role="alert" th:text="${Error}"></div>
 
         <div th:if="${Successfully}" class="alert alert-success mt-4" role="alert">
-            Действие успешно выполненно.
+            Действие успешно выполнено.
         </div>
 
         <div sec:authorize="${hasAnyRole('Admin')}" class="card default-shadow mt-4">
@@ -33,13 +33,11 @@
                     введите улицу (в формате ул.Xхххххх, ул.Xxx-xxx, ул.Xxx xxx) и номер дома (например: 99) <br>
                     <small class="text-danger">Если вашего населенного пункта нет в списке, обратитесь к разработчику.</small>
                 </div>
-<!--                th:object="${}"-->
                 <form th:method="post" action="/settings/address/save" th:object="${NewAddress}">
                     <div class="row">
                         <div class="col-12 col-lg-6">
                             <div class="input-form-group d-flex justify-content-between flex-column mb-4">
                                 <label for="settlements">Населенный пункт</label>
-<!--                                <small class="form-text text-danger" th:if="${#fields.hasErrors('role')}" th:errors="*{role}">Ошибка</small>-->
                                 <select id="settlements" class="js-example-basic-single form-control" style="width: 100% !important;" th:field="*{settlements}">
                                     <option th:value="${settlement.getId()}" th:each="settlement: ${AllSettlements}"
                                             th:text="${
@@ -113,10 +111,6 @@
             theme: "bootstrap"
         });
         $('#tableAddress').DataTable({
-            // dom: 'Blfrtip',
-            // buttons: [
-            //     'excel'
-            // ],
             language: {
                 url: '/plugins/data-tables/ru.json'
             }
