--- a/src/main/resources/templates/settings/settings-devices.html
+++ b/src/main/resources/templates/settings/settings-devices.html
@@ -25,18 +25,17 @@
                 <div class="alert alert-info mt-1" role="alert">
                     Перед добавлением переговорите с начальством.
                 </div>
-                <div th:if="${Error != ''}" class="alert alert-danger mt-4" role="alert" th:text="${Error}">
+                <div th:if="${Error != null}" class="alert alert-danger mt-4" role="alert" th:text="${Error}">
 
                 </div>
 
                 <div th:if="${Successfully}" class="alert alert-success mt-4" role="alert">
-                    Действие успешно выполненно.
+                    Действие успешно выполнено.
                 </div>
-                <form th:method="post" action="/settings/devices/type/new" th:object="${NewType}">
+                <form th:method="post" action="/settings/devices/type/new">
                     <div class="input-form-group d-flex justify-content-between flex-column mb-4">
                         <label class="text-white" for="house">Имя типа</label>
-                        <small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Ошибка</small>
-                        <input id="house" class="form-control" type="text" placeholder="Например: МФУ" th:field="*{name}">
+                        <input id="house" class="form-control" type="text" placeholder="Например: МФУ" name="name">
                     </div>
                     <div class="d-flex justify-content-end">
                         <button type="submit" class="btn btn-success">Добавить</button>
@@ -44,16 +43,16 @@
                 </form>
             </div>
         </div>
-        <div sec:authorize="${hasAnyRole('Admin')}" class="card default-shadow mt-4">
-            <div class="card-header">
-                Добавление нового производителя устройств
-            </div>
-            <div class="card-body">
-                <div class="alert alert-info mt-1" role="alert">
-                    Перед добавлением убедитесь что данный производитель существует и написан верно!
-                </div>
-            </div>
-        </div>
+<!--        <div sec:authorize="${hasAnyRole('Admin')}" class="card default-shadow mt-4">-->
+<!--            <div class="card-header">-->
+<!--                Добавление нового производителя устройств-->
+<!--            </div>-->
+<!--            <div class="card-body">-->
+<!--                <div class="alert alert-info mt-1" role="alert">-->
+<!--                    Перед добавлением убедитесь что данный производитель существует и написан верно!-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
     </div>
 </main>
 <script type="text/javascript" th:src="@{/plugins/bootstrap-5.3.0/js/bootstrap.bundle.js}"></script>
