--- a/src/main/resources/templates/info/info-home.html
+++ b/src/main/resources/templates/info/info-home.html
@@ -22,21 +22,39 @@
             <div class="alert alert-info">
                 <h5>v.2.1.0</h5>
                 <ol>
-                    <li>Теперь администраторы могут просмотреть историю пользователей прямо в программе</li>
+                    <li>Теперь администраторы могут просмотреть историю пользователей прямо в программе (пока без поиска)</li>
+                    <li>На странице всех устройств теперь в таблице можно посмотреть кто эксплуатирует устройство</li>
                     <li>Страница устройства</li>
                     <ol>
                         <li>Появилась история каждого устройства</li>
                         <li>Вернулась улучшенная версия технических характеристик устройств</li>
+                        <li>
+                            Исправлена ошибка, когда пользователя удаляли из телефонного
+                            справочника. Вы могли не попасть на страницу устройства,
+                            которую данный пользователь эксплуатировал и получить ошибку 500.
+                            Теперь вы будете получать информацию о том кто его эксплуатировал ранее, а поля будут отчищены
+                        </li>
                     </ol>
                     <li>Страница настроек</li>
                     <ol>
                         <li>Разблокирована вкладка "Устройства"</li>
-                        <li>Теперь администраторы могу добавлять новые типы устройства (Принтеры, МФУ...)</li>
-                        <li>Теперь администраторы могу добавлять новых производителей (Canon, LG...)</li>
+                        <li>Теперь администраторы могу добавлять новые типы устройства прямо в программе (Принтеры, МФУ...)</li>
+                        <li>Теперь администраторы могу добавлять новых производителей прямо в программе (Canon, LG...)</li>
                     </ol>
                     <li>Другое</li>
                     <ol>
+                        <li>Переход к Spring AOP (для знающих)</li>
                         <li>Исправлены текстовые ошибки</li>
+                        <li>Мелкие визуальные исправления</li>
+                    </ol>
+                </ol>
+            </div>
+            <div class="alert alert-secondary">
+                <h5>v.2.0.2</h5>
+                <ol>
+                    <li>Исправлена ошибка при выгрузки в Excel</li>
+                    <ol>
+                        <li>Была исправлена ошибка выгрузки в Excel, кода инвентарный номер заменялся 0 после 15-ого знака</li>
                     </ol>
                 </ol>
             </div>
