--- a/src/main/resources/templates/settings/settings-devices.html
+++ b/src/main/resources/templates/settings/settings-devices.html
@@ -17,6 +17,14 @@
 
         <div th:replace="~{fragments/settings-tabs.html::settings-tabs('/devices')}"></div>
 
+        <div th:if="${Error != null}" class="alert alert-danger mt-4" role="alert" th:text="${Error}">
+
+        </div>
+
+        <div th:if="${Successfully}" class="alert alert-success mt-4" role="alert">
+            Действие успешно выполнено.
+        </div>
+
         <div sec:authorize="${hasAnyRole('Admin')}" class="card default-shadow mt-4">
             <div class="card-header">
                 Добавление нового типа устройств
@@ -25,17 +33,30 @@
                 <div class="alert alert-info mt-1" role="alert">
                     Перед добавлением переговорите с начальством.
                 </div>
-                <div th:if="${Error != null}" class="alert alert-danger mt-4" role="alert" th:text="${Error}">
 
-                </div>
-
-                <div th:if="${Successfully}" class="alert alert-success mt-4" role="alert">
-                    Действие успешно выполнено.
-                </div>
                 <form th:method="post" action="/settings/devices/type/new">
                     <div class="input-form-group d-flex justify-content-between flex-column mb-4">
-                        <label class="text-white" for="house">Имя типа</label>
-                        <input id="house" class="form-control" type="text" placeholder="Например: МФУ" name="name">
+                        <label class="text-white" for="type">Имя типа</label>
+                        <input id="type" class="form-control" type="text" placeholder="Например: МФУ" name="name">
+                    </div>
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="btn btn-success">Добавить</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div sec:authorize="${hasAnyRole('Admin')}" class="card default-shadow mt-4">
+            <div class="card-header">
+                Добавление нового производителя
+            </div>
+            <div class="card-body">
+                <div class="alert alert-info mt-1" role="alert">
+                    Перед добавлением удостоверьтесь, что такого производителя действительно нет в БД и что такой производитель точно существует (лучше погуглить)
+                </div>
+                <form th:method="post" action="/settings/devices/manufacturer/new">
+                    <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                        <label class="text-white" for="manufacturer">Имя типа</label>
+                        <input id="manufacturer" class="form-control" type="text" placeholder="Например: HP" name="name">
                     </div>
                     <div class="d-flex justify-content-end">
                         <button type="submit" class="btn btn-success">Добавить</button>
