--- a/src/main/resources/templates/info/info-home.html
+++ b/src/main/resources/templates/info/info-home.html
@@ -34,6 +34,9 @@
                             которую данный пользователь эксплуатировал и получить ошибку 500.
                             Теперь вы будете получать информацию о том кто его эксплуатировал ранее, а поля будут отчищены
                         </li>
+                        <li>
+                            Исправлена ошибка. Программа не проверяла устройство на существование при изменении устройства.
+                        </li>
                     </ol>
                     <li>Страница настроек</li>
                     <ol>
