--- a/src/main/resources/templates/info/info-home.html
+++ b/src/main/resources/templates/info/info-home.html
@@ -26,6 +26,10 @@
                     <li>На странице всех устройств теперь в таблице можно посмотреть кто эксплуатирует устройство</li>
                     <li>Страница устройства</li>
                     <ol>
+                        <li>
+                            Добавлено новое поле "Дата списания". Данное поле будет доступно при выборе статус
+                            "Утилизировано" при добавлении\изменении устройства.
+                        </li>
                         <li>Появилась история каждого устройства</li>
                         <li>Вернулась улучшенная версия технических характеристик устройств</li>
                         <li>
