--- a/src/main/resources/templates/settings/settings-devices.html
+++ b/src/main/resources/templates/settings/settings-devices.html
@@ -31,7 +31,7 @@
             </div>
             <div class="card-body">
                 <div class="alert alert-info mt-1" role="alert">
-                    Перед добавлением переговорите с начальством.
+                    Перед добавлением переговорите с начальством (Тип устройств потом невозможно удалить).
                 </div>
 
                 <form th:method="post" action="/settings/devices/type/new">
